# opus

./: .env.example  OPUS_SETUP.md  SETUP_NOCO_MIGRATION.md  index.html  package-lock.json  package.json  tailwind.config.ts
public/: oauth-callback.html
scripts/: add_jornada_fase.sql  add_project_contract_fields.sql  add_project_detail_fields.sql  create_marketing_spend.sql  import-nocodb.mjs  import_clients_and_link.sql  import_projects.sql  link_projects_clients.sql  normalize_client_status.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/db/: add_product_sections.sql  add_sections_part1.sql  add_sections_part2.sql  add_sections_part3.sql  add_sections_part4.sql  create_products_table.sql  fix_encoding.sql  fix_materials_encoding.sql  import_v4_complete_v2.sql  import_v4_products_complete.sql  step1_alter_table.sql
src/hooks/: useAI.ts  useActionPlans.ts  useAuth.ts  useCheckins.ts  useClientFinancials.ts  useCollaborators.ts  useComments.ts  useCustomerSuccess.ts  useDirect.ts  useFeed.ts  useGTMCockpit.ts  useGamification.ts  useGoogleCalendar.ts  useMBR.ts  usePIC.ts  usePermissions.ts  usePresence.ts  useProducts.ts  useProfile.ts  useProjects.ts  useSquads.ts  useSquadsData.ts  useWhatsAppCS.ts  useWhatsAppGroups.ts  useWiki.ts
src/lib/: constants.ts  presence.ts  productCatalog.ts  supabase.ts  utils.ts
src/pages/: AIPage.tsx  CheckinsPage.tsx  CollaboratorsPage.tsx  CustomerSuccessPage.tsx  DeskCustomizePage.tsx  ExecutarPage.tsx  FeatureRequestsPage.tsx  (+20 more)
(+64 files in other folders)
