[package]
name = "opus"
version = "0.1.0"
description = "OPUS — V4 Company Virtual Office"
authors = ["V4 Company"]
edition = "2021"

[lib]
name = "opus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "opus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
